namespace java com.javas.thrifts.demo.beans


service BaseService {

    string alive();

}